--- a/Client code/MobileSocial/res/layout/lj_eightpuzzle_success_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_eightpuzzle_success_dialog.xml
@@ -16,6 +16,7 @@
 
 	<TextView 
 	    android:text="恭喜您挑战成功"
+	    android:textSize="@dimen/lj_dialog_dis_textsize"
 	    android:layout_width="250dp"
         android:layout_height="wrap_content"
 	    android:layout_marginTop="15dp"
@@ -24,6 +25,10 @@
 	    android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
+	<ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -35,6 +40,7 @@
 
         <Button
             android:id="@+id/lj_eightpuzzle_dialog_op"
+            android:textSize="@dimen/lj_dialog_dis_textsize"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
