--- a/Client code/MobileSocial/res/layout/lj_setting_remind_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_setting_remind_dialog.xml
@@ -15,16 +15,22 @@
     <!-- "@android:color/white" -->
 
     <TextView
-        android:text="您有未保存的信息，是否退出？"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:focusable="true"
         android:gravity="center"
         android:paddingBottom="10dp"
-        android:textColor="#1E90FF"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:text="您有未保存的信息，是否退出？"
+        android:textColor="#1E90FF"
+        android:textSize="@dimen/lj_dialog_dis_textsize" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:id="@+id/lj_setting_remind_dialog_button_layout"
@@ -36,47 +42,34 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/lj_setting_remind_dialog_cancel"
+            android:id="@+id/lj_setting_remind_dialog_confirm"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
-            android:text="否"
-            android:textColor="#1E90FF" />
+            android:text="确定"
+            android:textColor="#1E90FF"
+            android:textSize="@dimen/lj_dialog_confirm_textsize" />
+
+        <ImageView
+            android:layout_width="0.1dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/darker_gray" />
 
         <Button
-            android:id="@+id/lj_setting_remind_dialog_confirm"
+            android:id="@+id/lj_setting_remind_dialog_cancel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20.0dip"
             android:layout_weight="1"
             android:background="@android:color/white"
             android:gravity="center"
-            android:text="是"
-            android:textColor="#1E90FF"/>
+            android:text="取消"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="@dimen/lj_dialog_cancel_textsize" />
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:minWidth="300dp"
-        android:minHeight="200dp"
-        android:gravity="center"
-        android:visibility="gone" >
-
-        <ImageView
-            android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout_left_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/yg_loading_bkg1" />
-
-        <ImageView
-            android:id="@+id/yg_loginguide_page3_dialog_login_loading_layout_right_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/yg_loading_bkg2" />
-    </RelativeLayout>
 
 </LinearLayout>
