--- a/Client code/MobileSocial/res/layout/lj_songpuzzle_remindnotfull_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_songpuzzle_remindnotfull_dialog.xml
@@ -14,17 +14,23 @@
 
     <!-- "@android:color/white" -->
 
-	<TextView 
-	    android:id="@+id/lj_songpuzzle_remind_dialog_text"
-	    android:text="您的答案不完整，请补全答案"
-	    android:layout_width="250dp"
+    <TextView
+        android:id="@+id/lj_songpuzzle_remind_dialog_text"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-	    android:layout_marginTop="15dp"
-	    android:gravity="center"
-	    android:textColor="#1E90FF"
-	    android:paddingBottom="10dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:text="您的答案不完整，请补全答案"
+        android:textColor="#1E90FF"
+        android:textSize="@dimen/lj_dialog_dis_textsize" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -42,8 +48,8 @@
             android:background="@android:color/white"
             android:gravity="center"
             android:text="返回补全答案"
-            android:textColor="#1E90FF" />
+            android:textColor="#1E90FF"
+            android:textSize="@dimen/lj_dialog_dis_textsize" />
     </LinearLayout>
-
 
 </LinearLayout>
