--- a/Client code/MobileSocial/res/layout/lj_throw_back_invalid_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_throw_back_invalid_dialog.xml
@@ -19,11 +19,16 @@
 	    android:layout_width="250dp"
         android:layout_height="wrap_content"
 	    android:layout_marginTop="15dp"
+	    android:textSize="@dimen/lj_dialog_dis_textsize"
 	    android:gravity="center"
 	    android:textColor="#1E90FF"
 	    android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@android:color/darker_gray" />
     
     <TextView 
 	    android:text="无法扔回"
@@ -33,8 +38,13 @@
 	    android:gravity="center"
 	    android:textColor="#1E90FF"
 	    android:paddingBottom="10dp"
+	    android:textSize="@dimen/lj_dialog_dis_textsize"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@android:color/darker_gray" />
     
     <LinearLayout
         android:layout_width="fill_parent"
@@ -50,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@android:color/white"
+            android:textSize="@dimen/lj_dialog_dis_textsize"
             android:gravity="center"
             android:text="确认"
             android:textColor="#1E90FF"/>
