--- a/Client code/MobileSocial/res/layout/lj_userinfo_setting_singoff_remind_dialog.xml
+++ b/Client code/MobileSocial/res/layout/lj_userinfo_setting_singoff_remind_dialog.xml
@@ -16,6 +16,7 @@
 
     <TextView 
 	    android:text="确认登出此帐号？"
+	    android:textSize="@dimen/lj_dialog_dis_textsize"
 	    android:layout_width="250dp"
         android:layout_height="wrap_content"
 	    android:layout_marginTop="15dp"
@@ -24,6 +25,10 @@
 	    android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingTop="10dp" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:id="@+id/lj_eightpuzzle_restart_dialog_button_layout"
@@ -34,26 +39,36 @@
         android:gravity="center"
         android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/lj_userinfo_setting_singoff_dialog_button_cancel"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="取消"
-            android:textColor="#1E90FF" />
+        
 
         <Button
             android:id="@+id/lj_userinfo_setting_singoff_dialog_button_confirm"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20.0dip"
+           
             android:layout_weight="1"
             android:background="@android:color/white"
+            android:textSize="@dimen/lj_dialog_confirm_textsize"
             android:gravity="center"
-            android:text="确认"
+            android:text="确定"
             android:textColor="#1E90FF"/>
+        <ImageView
+            android:layout_width="0.1dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/darker_gray" />
+        <Button
+            android:id="@+id/lj_userinfo_setting_singoff_dialog_button_cancel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+             android:layout_marginLeft="20.0dip"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:textSize="@dimen/lj_dialog_cancel_textsize"
+            android:textColor="@android:color/holo_red_dark"
+            android:gravity="center"
+            android:text="取消" />
     </LinearLayout>
 
 
