Python Web: Change column type

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -29,13 +29,13 @@
                     </li>
                 </ul>
             </li>
-            <li class="{{statistics_active}}">
+            <li class="{{distribution_active}}">
                 <a class='dropdown-collapse ' href='#'>
                     <i class='icon-bar-chart'></i>
-                    <span>累计统计</span>
+                    <span>分布统计</span>
                     <i class='icon-angle-down angle-down'></i>
                 </a>
-                <ul class="{{statistics_stack}}">
+                <ul class="{{distribution_stack}}">
                     <li class={{sex_active}}>
                         <a href='subview?pageName=SexStatistics'>
                             <i class='icon-user'></i>
@@ -54,6 +54,15 @@
                             <span>地域分布</span>
                         </a>
                     </li>
+                </ul>
+            </li>
+            <li class="{{statistics_active}}">
+                <a class='dropdown-collapse ' href='#'>
+                    <i class='icon-bar-chart'></i>
+                    <span>累计统计</span>
+                    <i class='icon-angle-down angle-down'></i>
+                </a>
+                <ul class="{{statistics_stack}}">
                     <li class={{register_active}}>
                         <a href='subview?pageName=RegisterDayPage'>
                             <i class='icon-smile'></i>
@@ -64,24 +73,6 @@
                         <a href='subview?pageName=ZombieReturnDayPage'>
                             <i class='icon-meh'></i>
                             <span>僵尸用户回归人数统计</span>
-                        </a>
-                    </li>
-                    <li class=''>
-                        <a href='fileupload.html'>
-                            <i class='icon-file'></i>
-                            <span>Fileupload</span>
-                        </a>
-                    </li>
-                    <li class=''>
-                        <a href='todo.html'>
-                            <i class='icon-list-alt'></i>
-                            <span>Todo list</span>
-                        </a>
-                    </li>
-                    <li class=''>
-                        <a href='wysiwyg.html'>
-                            <i class='icon-paste'></i>
-                            <span>WYSIWYG</span>
                         </a>
                     </li>
                 </ul>
