Python Web: add dict build

--- a/MaintainServer/Display/templates/Display/base/nav_base.html
+++ b/MaintainServer/Display/templates/Display/base/nav_base.html
@@ -50,7 +50,7 @@
                     </li>
                     <li class={{map_active}}>
                         <a href='subview?pageName=MapDistribution'>
-                            <i class='icon-map-marker'></i>
+                            <i class='icon-globe'></i>
                             <span>地域分布</span>
                         </a>
                     </li>
@@ -58,7 +58,7 @@
             </li>
             <li class="{{statistics_active}}">
                 <a class='dropdown-collapse ' href='#'>
-                    <i class='icon-bar-chart'></i>
+                    <i class='icon-align-left'></i>
                     <span>累计统计</span>
                     <i class='icon-angle-down angle-down'></i>
                 </a>
