Python Web: start app num

--- a/MaintainServer/Display/templates/Display/base/online_num_base.html
+++ b/MaintainServer/Display/templates/Display/base/online_num_base.html
@@ -4,8 +4,8 @@
         <div class="boxchart-overlay blue">
             <div class="boxchart">5,6,7,2,0,4,2,4,8,2,3,3,2</div>
         </div>
-        <span class="title">Clients</span>
-        <span class="value">4 589</span>
+        <span class="title">应用启动次数</span>
+        <span class="value" id="app_start_num"></span>
     </div>
 
     <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
