--- a/MaintainServer/Display/templates/Display/charts/realtime_online_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/realtime_online_chart.html
@@ -43,6 +43,11 @@ $(function () {
                             xmlHttp.send( null );
                             var maxNum = parseInt(xmlHttp.responseText);
                             document.getElementById("max_num").innerHTML = maxNum;
+
+                            xmlHttp.open( "GET", "getStartAppNum", false );
+                            xmlHttp.send( null );
+                            var maxNum = parseInt(xmlHttp.responseText);
+                            document.getElementById("app_start_num").innerHTML = maxNum;
                         }, 1000);
                     }
                 }
@@ -103,6 +108,11 @@ $(function () {
                             xmlHttp.send( null );
                             var maxNum = parseInt(xmlHttp.responseText);
                             document.getElementById("max_num").innerHTML = maxNum;
+
+                            xmlHttp.open( "GET", "getStartAppNum", false );
+                            xmlHttp.send( null );
+                            var maxNum = parseInt(xmlHttp.responseText);
+                            document.getElementById("app_start_num").innerHTML = maxNum;
 
                     for (i = -19; i <= 0; i += 1) {
                         data.push({
