Python Web: per hour data change

--- a/MaintainServer/Display/templates/Display/charts/perhour_online_chart.html
+++ b/MaintainServer/Display/templates/Display/charts/perhour_online_chart.html
@@ -13,7 +13,7 @@
 				.highcharts(
 						{
 							title : {
-								text : '每小时在线人数',
+								text : '上月平均每小时在线人数',
 								x : -20
 							//center
 							},
@@ -45,7 +45,7 @@
      						   },
 							series : [
 									{
-										name: '每小时在线人数',
+										name: '上月平均每小时在线人数',
 										data : perhouronline_list
 									} ,]
 						});
