--- a/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
+++ b/Client code/MobileSocial/res/layout/lj_bottle_info_layout.xml
@@ -108,7 +108,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="扔回海里" />
+                    android:text="扔回" />
 
                 <View
                     android:layout_width="fill_parent"
